# ProjectDocHelper

./: .gitignore  README.md  README_CN.md  pyproject.toml
src/docs/: ProjectRequirements.md
src/projectdochelper/: generate.py  main.py  server.py
src/templates/: ProjectRequirements.md.j2
